# q2-hello-world2

./: .copier-answers.yml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release-env.yml
environment-files/: q2-hello-world-qiime2-tiny-dev.yml  q2-hello-world-qiime2-tiny-release.yml  q2-hello-world2-qiime2-tiny-2025.7-release-1.0.2.yml  q2-hello-world2-qiime2-tiny-dev.yml  q2-hello-world2-qiime2-tiny-release.yml
q2_hello_world/: __init__.py  plugin_setup.py
q2_hello_world/tests/: __init__.py  test_methods.py
q2_hello_world2/: _methods.py  plugin_setup.py
q2_hello_world2/tests/: test_methods.py
